--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -24,7 +24,7 @@ dango-client                = { workspace = true }
 dango-genesis               = { workspace = true }
 dango-httpd                 = { workspace = true, features = ["metrics"] }
 dango-indexer-sql           = { workspace = true, features = ["async-graphql", "metrics", "tracing"] }
-dango-proposal-preparer     = { workspace = true }
+dango-proposal-preparer     = { workspace = true, features = ["metrics"] }
 dango-types                 = { workspace = true }
 data-encoding               = { workspace = true }
 dialoguer                   = { workspace = true }
