--- a/dango/proposal-preparer/Cargo.toml
+++ b/dango/proposal-preparer/Cargo.toml
@@ -9,11 +9,15 @@ repository    = { workspace = true }
 rust-version  = { workspace = true }
 version       = { workspace = true }
 
+[features]
+metrics = ["dep:metrics"]
+
 [dependencies]
 anyhow       = { workspace = true }
 dango-types  = { workspace = true }
 grug         = { workspace = true }
 grug-app     = { workspace = true }
+metrics      = { workspace = true, optional = true }
 prost        = { workspace = true }
 pyth-client  = { workspace = true }
 pyth-types   = { workspace = true }
