--- a/grug/db/disk/Cargo.toml
+++ b/grug/db/disk/Cargo.toml
@@ -18,9 +18,9 @@ grug-jmt   = { workspace = true }
 grug-types = { workspace = true }
 ics23      = { workspace = true, optional = true }
 rocksdb    = { workspace = true }
-tempfile   = { workspace = true }
 thiserror  = { workspace = true }
 
 [dev-dependencies]
-hex-literal = { workspace = true }
-proptest    = { workspace = true }
+hex-literal  = { workspace = true }
+proptest     = { workspace = true }
+temp-rocksdb = { workspace = true }
