--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -38,6 +38,7 @@ sea-orm                 = { workspace = true }
 serde                   = { workspace = true }
 serde_json              = { workspace = true }
 sha2                    = { workspace = true }
+temp-rocksdb            = { workspace = true }
 
 [dev-dependencies]
 anyhow                = { workspace = true }
