--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -21,7 +21,7 @@ digest                  = { workspace = true }
 grug                    = { workspace = true }
 grug-app                = { workspace = true }
 grug-crypto             = { workspace = true }
-grug-db-disk            = { workspace = true }
+grug-db-disk-lite       = { workspace = true }
 grug-db-memory          = { workspace = true }
 grug-vm-hybrid          = { workspace = true }
 grug-vm-rust            = { workspace = true }
