--- a/deploy/roles/dango/templates/devnet/config/app.toml
+++ b/deploy/roles/dango/templates/devnet/config/app.toml
@@ -28,9 +28,13 @@ enabled = true
 # Whether to store block respnonses.
 keep_blocks = true
 
+[indexer.database]
+
 # URL to the SQL database to be used by the indexer.
 # This will get overwritten by ENV variables to include password.
-database_url = "postgres://postgres@db:5432/grug_dev"
+url = "postgres://postgres@db:5432/grug_dev"
+
+max_connections = 10
 
 [indexer.httpd]
 
