--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -28,8 +28,13 @@ enabled = true
 # Whether to store block respnonses.
 keep_blocks = true
 
+[indexer.database]
+
 # URL to the SQL database to be used by the indexer.
 database_url = "postgres://postgres@db:5432/grug_dev"
+
+# How many connections to keep in the connection pool.
+max_connections = 10
 
 [indexer.httpd]
 
