--- a/grug/malachite/Cargo.toml
+++ b/grug/malachite/Cargo.toml
@@ -22,6 +22,7 @@ prost           = { workspace = true }
 prost-types     = { workspace = true }
 ractor          = { workspace = true }
 serde           = { workspace = true }
+thiserror       = { workspace = true }
 tokio           = { workspace = true }
 tracing         = { workspace = true }
 
