--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -27,5 +27,7 @@ tokio          = { workspace = true }
 [dev-dependencies]
 assert-json-diff = { workspace = true }
 assertor         = { workspace = true }
+base64           = { workspace = true }
 grug-storage     = { workspace = true }
+itertools        = { workspace = true }
 tracing          = { workspace = true }
