chore: update dependencies

--- a/ui/applets/kit/package.json
+++ b/ui/applets/kit/package.json
@@ -55,13 +55,13 @@
     "@left-curve/dango": "workspace:^",
     "@left-curve/store": "workspace:^",
     "@left-curve/ui-config": "workspace:^",
+    "@microlink/react-json-view": "^1.26.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "framer-motion": "catalog:",
     "qr-code-styling": "^1.7.2",
-    "react-json-view": "^1.21.3",
     "react-use": "^17.5.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
@@ -72,11 +72,11 @@
     "@left-curve/config": "workspace:^",
     "@rsbuild/core": "catalog:",
     "@rsbuild/plugin-react": "catalog:",
-    "@storybook/addon-a11y": "^8.3.2",
-    "@storybook/addon-essentials": "^8.3.2",
-    "@storybook/addon-links": "^8.3.2",
-    "@storybook/blocks": "^8.3.2",
-    "@storybook/react": "^8.3.2",
+    "@storybook/addon-a11y": "^8.6.12",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/react": "^8.6.12",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
@@ -84,13 +84,14 @@
     "postcss": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "storybook": "^8.3.2",
+    "storybook": "^8.6.12",
     "storybook-react-rsbuild": "^1.0.1",
     "tailwindcss": "catalog:"
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
     "@tanstack/react-table": ">=8.0.0",
+    "big.js": ">=6.0.0",
     "date-fns": ">=4.0.0",
     "react": "^18",
     "react-dom": "^18",
