add wals folder to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ ui/config/project.inlang/*
 **/proptest-regressions/
 **/*.proptest-regressions
 !pyth/client/testdata/
+**/wals/
 
 # Network data
 networks/**/configs/cometbft/config/addrbook.json
