--- a/ui/applets/kit/package.json
+++ b/ui/applets/kit/package.json
@@ -77,6 +77,7 @@
     "@storybook/addon-links": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
     "@storybook/react": "^8.6.12",
+    "@types/big.js": "^6.2.2",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
