--- a/grug/malachite/tests/nodes_config/node1.toml
+++ b/grug/malachite/tests/nodes_config/node1.toml
@@ -36,8 +36,8 @@ mesh_outbound_min = 2
 type              = "gossipsub"
 
 [mempool]
-gossip_batch_size = 0
-max_tx_count      = 10000
+avg_tx_bytes  = "100 KB"
+max_txs_bytes = "4 MB"
 
 [mempool.p2p]
 listen_addr      = "/ip4/127.0.0.1/tcp/28000"
@@ -60,12 +60,6 @@ mesh_n_low        = 4
 mesh_outbound_min = 2
 type              = "gossipsub"
 
-[mempool.load]
-count     = 1000
-interval  = "1s"
-load_type = "uniform_load"
-size      = "256 B"
-
 [value_sync]
 enabled                = true
 request_timeout        = "10s"
@@ -79,5 +73,4 @@ listen_addr = "127.0.0.1:29000"
 flavor = "single_threaded"
 
 [host]
-block_time   = "5s"
-max_tx_bytes = "4 MB"
+block_time = "5s"
