--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -27,7 +27,7 @@ grug-app                    = { workspace = true }
 grug-math                   = { workspace = true }
 grug-types                  = { workspace = true, features = ["chrono"] }
 indexer-disk-saver          = { workspace = true }
-indexer-sql                 = { workspace = true }
+indexer-sql                 = { workspace = true, features = ["async-graphql"] }
 itertools                   = { workspace = true }
 sea-orm                     = { workspace = true }
 serde                       = { workspace = true }
