--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -25,7 +25,7 @@ async-trait           = { workspace = true }
 borsh                 = { workspace = true }
 futures               = { workspace = true }
 grug-app              = { workspace = true }
-grug-types            = { workspace = true, features = ["sea-orm"] }
+grug-types            = { workspace = true, features = ["chrono", "sea-orm"] }
 indexer-disk-saver    = { workspace = true, features = ["tracing"] }
 indexer-sql-migration = { workspace = true }
 itertools             = { workspace = true }
