--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -10,9 +10,14 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-async-graphql = ["dep:actix-web", "dep:async-graphql", "grug-types/async-graphql"]
-testing       = []
-tracing       = ["dep:tracing"]
+async-graphql = [
+    "dep:actix-web",
+    "dep:async-graphql",
+    "grug-types/async-graphql",
+    "indexer-sql/async-graphql",
+]
+testing = []
+tracing = ["dep:tracing"]
 
 [dependencies]
 actix-web                   = { workspace = true, optional = true }
@@ -27,7 +32,7 @@ grug-app                    = { workspace = true }
 grug-math                   = { workspace = true }
 grug-types                  = { workspace = true, features = ["chrono"] }
 indexer-disk-saver          = { workspace = true }
-indexer-sql                 = { workspace = true, features = ["async-graphql"] }
+indexer-sql                 = { workspace = true }
 itertools                   = { workspace = true }
 sea-orm                     = { workspace = true }
 serde                       = { workspace = true }
