--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -43,4 +43,5 @@ tracing               = { workspace = true, optional = true }
 uuid                  = { workspace = true }
 
 [dev-dependencies]
-assertor = { workspace = true }
+assertor  = { workspace = true }
+test-case = { workspace = true }
