--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -10,9 +10,14 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-async-graphql = ["dep:actix-web", "dep:async-graphql", "grug-types/async-graphql"]
-testing       = []
-tracing       = ["dep:tracing"]
+async-graphql = [
+  "dep:actix-web",
+  "dep:async-graphql",
+  "grug-types/async-graphql",
+  "indexer-sql/async-graphql",
+]
+testing = []
+tracing = ["dep:tracing"]
 
 [dependencies]
 actix-web                   = { workspace = true, optional = true }
