--- a/deploy/roles/dango/templates/devnet/config/app.toml
+++ b/deploy/roles/dango/templates/devnet/config/app.toml
@@ -53,6 +53,23 @@ port = 8080
 # this line.
 #cors_allowed_origin = "*"
 
+[indexer.metrics_httpd]
+
+# Whether to enable the HTTP server.
+enabled = true
+
+# IP address to listen on. `0.0.0.0` means all interfaces.
+ip = "0.0.0.0"
+
+# Port to listen on.
+port = 9191
+
+# Allowed origin for CORS.
+#
+# Wildcards are not supported here. To allow all origins, simply comment out
+# this line.
+#cors_allowed_origin = "*"
+
 ################################################################################
 ###                         Tendermint Configuration                         ###
 ################################################################################
