--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -16,6 +16,7 @@ async-graphql = [
   "grug-types/async-graphql",
   "indexer-sql/async-graphql",
 ]
+metrics = ["dep:metrics"]
 testing = []
 tracing = ["dep:tracing"]
 
@@ -34,6 +35,7 @@ grug-types                  = { workspace = true, features = ["chrono"] }
 indexer-disk-saver          = { workspace = true }
 indexer-sql                 = { workspace = true }
 itertools                   = { workspace = true }
+metrics                     = { workspace = true, optional = true }
 sea-orm                     = { workspace = true }
 serde                       = { workspace = true }
 serde_json                  = { workspace = true }
