Enable psql for github actions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -102,16 +102,16 @@ jobs:
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
-    # services:
-    #   postgres:
-    #     image: postgres:17
-    #     env:
-    #       POSTGRES_PASSWORD: postgres
-    #     options: >-
-    #       --health-cmd pg_isready
-    #       --health-interval 10s
-    #       --health-timeout 5s
-    #       --health-retries 5
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -122,9 +122,9 @@ jobs:
           toolchain: stable
           components: clippy
 
-      # - name: Create database
-      #   run: |
-      #     createdb -U postgres -h postgres "$PGDATABASE"
+      - name: Create psql database
+        run: |
+          createdb -U postgres -h postgres "$PGDATABASE"
 
       # - uses: actions/cache@v4
       #   with:
