--- a/networks/localdango/monitoring/grafana/provisioning/datasources/datasources.yml
+++ b/networks/localdango/monitoring/grafana/provisioning/datasources/datasources.yml
@@ -4,5 +4,11 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: prometheus:9090
+    url: http://prometheus:9090
     isDefault: true
+
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    isDefault: false
