--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -39,6 +39,7 @@ serde                   = { workspace = true }
 serde_json              = { workspace = true }
 sha2                    = { workspace = true }
 temp-rocksdb            = { workspace = true }
+tracing                 = { workspace = true }
 
 [dev-dependencies]
 actix-service               = { workspace = true }
