--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -36,6 +36,7 @@ grug-types                  = { workspace = true }
 grug-vm-hybrid              = { workspace = true }
 hex                         = { workspace = true }
 home                        = { workspace = true }
+httpd                       = { workspace = true }
 indexer-hooked              = { workspace = true, features = ["metrics", "tracing"] }
 indexer-httpd               = { workspace = true, features = ["metrics", "tracing"] }
 indexer-sql                 = { workspace = true, features = ["async-graphql", "metrics", "tracing"] }
