--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -18,6 +18,7 @@ grug-db-memory = { workspace = true }
 grug-testing   = { workspace = true }
 grug-types     = { workspace = true }
 grug-vm-rust   = { workspace = true }
+httpd          = { workspace = true }
 indexer-httpd  = { workspace = true, features = ["testing", "tracing"] }
 indexer-sql    = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 sea-orm        = { workspace = true }
