--- a/dango/mocks/httpd/Cargo.toml
+++ b/dango/mocks/httpd/Cargo.toml
@@ -12,16 +12,16 @@ version       = { workspace = true }
 [dependencies]
 anyhow                  = { workspace = true }
 dango-genesis           = { workspace = true }
-dango-httpd             = { workspace = true }
 dango-indexer-sql       = { workspace = true }
 dango-proposal-preparer = { workspace = true }
 dango-testing           = { workspace = true }
+grug-app                = { workspace = true }
 grug-db-memory          = { workspace = true }
 grug-testing            = { workspace = true }
 grug-types              = { workspace = true }
 grug-vm-rust            = { workspace = true }
+httpd                   = { workspace = true }
 hyperlane-testing       = { workspace = true }
-indexer-httpd           = { workspace = true, features = ["testing", "tracing"] }
 indexer-sql             = { workspace = true, features = ["tracing"] }
 tokio                   = { workspace = true }
 tracing                 = { workspace = true }
