--- a/dango/mocks/httpd/Cargo.toml
+++ b/dango/mocks/httpd/Cargo.toml
@@ -12,6 +12,7 @@ version       = { workspace = true }
 [dependencies]
 anyhow                  = { workspace = true }
 dango-genesis           = { workspace = true }
+dango-httpd             = { workspace = true }
 dango-indexer-sql       = { workspace = true }
 dango-proposal-preparer = { workspace = true }
 dango-testing           = { workspace = true }
@@ -22,6 +23,7 @@ grug-types              = { workspace = true }
 grug-vm-rust            = { workspace = true }
 httpd                   = { workspace = true }
 hyperlane-testing       = { workspace = true }
+indexer-httpd           = { workspace = true, features = ["tracing"] }
 indexer-sql             = { workspace = true, features = ["tracing"] }
 tokio                   = { workspace = true }
 tracing                 = { workspace = true }
