Use hooked indexer

--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -28,6 +28,7 @@ futures               = { workspace = true }
 grug-app              = { workspace = true }
 grug-types            = { workspace = true, features = ["chrono", "sea-orm"] }
 indexer-disk-saver    = { workspace = true, features = ["tracing"] }
+indexer-hooked        = { workspace = true }
 indexer-sql-migration = { workspace = true }
 itertools             = { workspace = true }
 metrics               = { workspace = true, optional = true }
