--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -29,6 +29,7 @@ grug-vm-wasm            = { workspace = true }
 hex-literal             = { workspace = true }
 hyperlane-testing       = { workspace = true }
 hyperlane-types         = { workspace = true }
+indexer-hooked          = { workspace = true, features = ["metrics", "tracing"] }
 indexer-httpd           = { workspace = true, features = ["metrics"] }
 indexer-sql             = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 k256                    = { workspace = true }
