--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -40,9 +40,10 @@ strum                 = { workspace = true }
 strum_macros          = { workspace = true }
 tempfile              = { workspace = true }
 thiserror             = { workspace = true }
-tokio                 = { workspace = true }
+tokio                 = { workspace = true, features = ["sync"] }
 tokio-stream          = { workspace = true }
 tracing               = { workspace = true, optional = true }
+typedmap              = { workspace = true, features = ["dashmap"] }
 uuid                  = { workspace = true }
 
 [dev-dependencies]
