--- a/indexer/hooked/Cargo.toml
+++ b/indexer/hooked/Cargo.toml
@@ -27,6 +27,7 @@ borsh                 = { workspace = true }
 futures               = { workspace = true }
 grug-app              = { workspace = true }
 grug-types            = { workspace = true, features = ["chrono", "sea-orm"] }
+http                  = { workspace = true }
 indexer-disk-saver    = { workspace = true, features = ["tracing"] }
 indexer-sql-migration = { workspace = true }
 itertools             = { workspace = true }
@@ -42,7 +43,6 @@ thiserror             = { workspace = true }
 tokio                 = { workspace = true }
 tokio-stream          = { workspace = true }
 tracing               = { workspace = true, optional = true }
-typedmap              = { version = "0.6", features = ["dashmap"] }
 uuid                  = { workspace = true }
 
 [dev-dependencies]
