--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -19,6 +19,7 @@ grug-testing   = { workspace = true }
 grug-types     = { workspace = true }
 grug-vm-rust   = { workspace = true }
 httpd          = { workspace = true }
+indexer-hooked = { workspace = true, features = ["tracing"] }
 indexer-httpd  = { workspace = true, features = ["testing", "tracing"] }
 indexer-sql    = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 sea-orm        = { workspace = true }
