--- a/deploy/justfile
+++ b/deploy/justfile
@@ -35,6 +35,9 @@ deploy-dango:
   ansible-playbook dango.yml --tags setup
   ansible-playbook dango.yml --skip-tags setup
 
+deploy-monitoring:
+  ansible-playbook monitoring.yml
+
 reset-deploy:
   ansible-playbook reset-cometbft.yml
   ansible-playbook reset-dango.yml
