--- a/dango/mocks/httpd/Cargo.toml
+++ b/dango/mocks/httpd/Cargo.toml
@@ -23,6 +23,7 @@ grug-types              = { workspace = true }
 grug-vm-rust            = { workspace = true }
 httpd                   = { workspace = true }
 hyperlane-testing       = { workspace = true }
+indexer-hooked          = { workspace = true }
 indexer-httpd           = { workspace = true, features = ["tracing"] }
 indexer-sql             = { workspace = true, features = ["tracing"] }
 tokio                   = { workspace = true }
