--- a/dango/indexer/httpd/Cargo.toml
+++ b/dango/indexer/httpd/Cargo.toml
@@ -10,10 +10,13 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-metrics = ["dep:metrics", "indexer-httpd/metrics", "indexer-sql/metrics"]
+metrics = ["dep:actix-web-metrics", "dep:metrics", "indexer-httpd/metrics", "indexer-sql/metrics"]
+tracing = []
 
 [dependencies]
+actix-cors              = { workspace = true }
 actix-web               = { workspace = true }
+actix-web-metrics       = { workspace = true, optional = true }
 async-graphql           = { workspace = true }
 async-graphql-actix-web = { workspace = true }
 chrono                  = { workspace = true }
@@ -26,6 +29,7 @@ indexer-sql             = { workspace = true, features = ["async-graphql"] }
 itertools               = { workspace = true }
 metrics                 = { workspace = true, optional = true }
 sea-orm                 = { workspace = true }
+sentry-actix            = { workspace = true }
 serde                   = { workspace = true }
 thiserror               = { workspace = true }
 tokio                   = { workspace = true }
