--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -14,12 +14,14 @@ actix-web               = { workspace = true }
 anyhow                  = { workspace = true }
 async-graphql           = { workspace = true }
 dango-genesis           = { workspace = true }
+dango-httpd             = { workspace = true, features = ["metrics"] }
 dango-indexer-sql       = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 dango-proposal-preparer = { workspace = true }
 dango-types             = { workspace = true, features = ["async-graphql"] }
 digest                  = { workspace = true }
 grug                    = { workspace = true }
 grug-app                = { workspace = true }
+grug-client             = { workspace = true }
 grug-crypto             = { workspace = true }
 grug-db-disk-lite       = { workspace = true }
 grug-db-memory          = { workspace = true }
@@ -40,6 +42,7 @@ serde                   = { workspace = true }
 serde_json              = { workspace = true }
 sha2                    = { workspace = true }
 temp-rocksdb            = { workspace = true }
+tokio                   = { workspace = true }
 
 [dev-dependencies]
 actix-service               = { workspace = true }
